cleaned decorator